--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Вход</title>
+  <title>ProjectHub</title>
   <link rel="stylesheet" href="index.css" />
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
